# rag

./: README.md  main.py  pyproject.toml  requirements.txt
0DataIngestParasing/: 1DataIngestParsing.ipynb
0DataIngestParasing/data/textfiles/: stochastic_calc.txt
